<resources>
    <string name="app_name">Reef Angel Status</string>
    <string name="app_version">1.0.0 - Beta 1</string>
    <string name="db_authority">info.curtbinder.reefangel.db</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
        <string name="menuMainRefresh">Refresh</string>
        <string name="menuMainSettings">Settings</string>
        <string name="menuMainAbout">About</string>
        <string name="menuMainCommands">Commands</string>
        <string name="menuMainMemory">Memory</string>
        <string name="menuMainHistory">History</string>
        <string name="menuMainErrors">Errors</string>
        <string name="menuMainNotifications">Notifications</string>
        <string name="menuDelete">Delete</string>
        <string name="titleHistory">Parameters History</string>
        <string name="titleMemory">Internal Memory</string>
        <string name="titleCommands">Commands</string>
        <string name="titleAbout">About Reef Angel Status</string>
        <string name="titleLicense">License Information</string>
        <string name="titleMemoryTabs">Memory Pages</string>
        <string name="titleCommandTabs">Command Pages</string>
        <string name="titlePrefs">Status Settings</string>
        <string name="titleDateTime">Date / Time</string>
        <string name="titleSelectProfile">Select Profile</string>
        <string name="titleChangelog">Changelog</string>
        <string name="titleVortech">Vortech Config</string>
        <string name="titleError">Errors History</string>
        <string name="titleNotifications">Notifications</string>
        <string name="titleCreateNotification">Create Notification</string>
        <string name="titleUpdateNotification">Update Notification</string>
    <string name="titleOverride">PWM Override</string>
    <string name="titleFlags">Flags</string>
    <string name="titleAlert">Alert Flags</string>
    <string name="titleStatus">Status Flags</string>
        <string name="tabMemory1">memory_tab_1</string>
        <string name="tabMemory2">memory_tab_2</string>
        <string name="tabCommand1">command_tab_1</string>
        <string name="tabCommand2">command_tab_2</string>
    <string name="textAbout">Monitors the status of your Reef Angel Controller and displays the values.  You must have a wifi attachment installed on
your controller or have a ReefAngel UserID to use this app.</string>
        <string name="descriptionMemory">Select the memory location to update or enter a custom location.</string>
        <string name="descriptionModes">Feeding and Water Change buttons enter the appropriate modes. Press the Exit button to simulate a button press on the controller, which exits the modes.</string>
    <string name="descriptionFirstRun">Before you begin, you must configure a few settings in order for the application to run properly.\n
* Hostname (required): Enter the hostname or IP address of your controller.\n
* Port (optional): Enter the port for the controller (leave blank if unknown or the default).\n
* User ID (optional): Enter your username for the forum. This is to download your labels stored on the portal.</string>
        <string name="descriptionCurrentControllerTime">Press \'Get Time\' to retrieve the current date and time from the controller.  Press \'Set Current Time\' to set the date and time to match your device.</string>
        <string name="descriptionCustomControllerTime">You can enter a custom date and time. Use \'Change Time\' or \'Change Date\' to enter the custom date and time. Use \'Set Custom Time\' to set it.</string>
        <string name="descriptionMode">Change the Vortech Mode</string>
        <string name="descriptionSpeed">Change the Vortech Speed</string>
        <string name="descriptionDuration">Change the Vortech Duration</string>
        <string name="descriptionReefAngelLogo">Reef Angel Logo</string>
        <string name="buttonRefresh">Refresh</string>
        <string name="buttonOk">OK</string>
        <string name="buttonYes">Yes</string>
        <string name="buttonNo">No</string>
        <string name="buttonVersion">Get Version</string>
        <string name="buttonDateGet">Get Time</string>
        <string name="buttonDateSet">Set Current Time</string>
        <string name="buttonRead">Read Value</string>
        <string name="buttonWrite">Write Value</string>
        <string name="buttonFeeding">Feeding Mode</string>
        <string name="buttonWater">Water Change</string>
        <string name="buttonExit">Exit Mode</string>
        <string name="buttonAtoClear">Clear ATO</string>
        <string name="buttonOverheatClear">Clear Overheat</string>
        <string name="buttonGetControllerTime">Get Time</string>
        <string name="buttonSetCurrentTime">Set Current Time</string>
        <string name="buttonChangeDate">Change Date</string>
        <string name="buttonChangeTime">Change Time</string>
        <string name="buttonSetCustomTime">Set Custom Time</string>
        <string name="buttonCancel">Cancel</string>
        <string name="buttonUpdate">Update</string>
        <string name="buttonFinish">Finish</string>
        <string name="buttonAdd">Add</string>
        <string name="buttonDelete">Delete</string>
        <string name="buttonSave">Save</string>
        <string name="radioByte">Byte</string>
        <string name="radioInt">Int</string>
        <string name="labelLastUpdated">Last Updated:</string>
        <string name="labelStatus">Status</string>
        <string name="labelController">Controller</string>
        <string name="labelTemp1">T1</string>
        <string name="labelTemp2">T2</string>
        <string name="labelTemp3">T3</string>
        <string name="labelPH">PH</string>
        <string name="labelDP">DP</string>
        <string name="labelAP">AP</string>
        <string name="labelSalinity">Salinity</string>
        <string name="labelORP">ORP</string>
        <string name="labelPHExp">PH Exp</string>
        <string name="labelWaterLevel">Water</string>
        <string name="labelHumidity">Humidity</string>
        <string name="labelAtoLow">ATO Low</string>
        <string name="labelAtoHigh">ATO High</string>
        <string name="labelPort1">Port 1</string>
        <string name="labelPort2">Port 2</string>
        <string name="labelPort3">Port 3</string>
        <string name="labelPort4">Port 4</string>
        <string name="labelEnable">Enable</string>
        <string name="labelLightsOn">Lights On</string>
        <string name="labelLightsOff">Lights Off</string>
        <string name="labelReboot">Reboot</string>
        <string name="websiteReefangel">http://www.reefangel.com/</string>
        <string name="forumReefangel">http://forum.reefangel.com/</string>
        <string name="prefsCategoryProfiles">Profiles</string>
        <string name="prefsCategoryPortal">Portal</string>
        <string name="prefsCategoryController">Controller</string>
        <string name="prefsCategoryApp">Application Info</string>
        <string name="prefsCategoryAdvanced">Advanced</string>
        <string name="prefCategoryProfilesSummary">Select your Device, update your hosts, set your Portal ID</string>
        <string name="prefDeviceTitle">Device</string>
        <string name="prefDeviceDefault">0</string>
        <string name="prefHostTitle">Home Host</string>
        <string name="prefHostHomeDefault">192.168.1.10</string>
        <string name="prefHostAwayDefault"></string>
        <string name="prefPortTitle">Home Port</string>
        <string name="prefPortDefault">2000</string>
        <string name="prefHostAwayTitle">Away Host</string>
        <string name="prefPortAwayTitle">Away Port</string>
        <string name="prefProfileSelectedDefault">0</string>
        <string name="prefProfileSelectedTitle">Selected Profile</string>
        <string name="prefProfileSelectedSummary">Profile to be used when querying controller, can long press on refresh button to change quickly</string>
        <string name="prefUserIdTitle">User ID</string>
        <string name="prefUserIdDefault">reefangel</string>
        <string name="prefAppTitle">Info</string>
        <string name="prefVersionTitle">Version</string>
        <string name="prefAuthorTitle">Author</string>
        <string name="prefAuthorSummary">Curt Binder</string>
        <string name="prefContributorTitle">Contributors</string>
        <string name="prefContributorSummary">Roberto Imai, Mathieu Brisson, Tin Pavlinic</string>
        <string name="prefCopyrightTitle">Copyright</string>
        <string name="prefCopyrightSummary">Copyright 2011–13 Curt Binder</string>
        <string name="prefLicenseTitle">License</string>
        <string name="prefLicenseSummary">This work is licensed under the MIT License.</string>
        <string name="prefChangelogSummary">Displays changelog</string>
        <string name="prefReefAngelTitle">Reef Angel Controller</string>
        <string name="prefReefAngelSummary">http://www.reefangel.com/</string>
        <string name="prefForumTitle">Reef Angel Forums</string>
        <string name="prefForumSummary">http://forum.reefangel.com/</string>
        <string name="prefControllerSummary">Update labels, Toggle visibility, Set Expansion Modules</string>
        <string name="prefPre10MemorySummary">Memory locations</string>
        <string name="prefPre10MemoryTitle">Pre v1.0 Locations </string>
        <string name="prefAutoUpdateIntervalTitle">Interval</string>
        <string name="prefAutoUpdateIntervalDefault">900000</string>
        <string name="prefAutoUpdateModulesSummary">Based on the controller</string>
        <string name="prefAutoUpdateModulesTitle">Auto Update Modules</string>
        <string name="prefAutoUpdateProfileTitle">Profile</string>
        <string name="prefAutoUpdateProfileDefault">1</string>
        <string name="prefAutoUpdateCategory">Automatic Updating</string>
        <string name="prefNotificationCategory">Notifications</string>
        <string name="prefNotificationSoundTitle">Choose ringtone</string>
        <string name="prefNotificationErrorRetryTitle">Error Retries</string>
        <string name="prefNotificationErrorRetryDefault">0</string>
        <string name="prefNotificationErrorRetryIntervalDefault">5000</string>
        <string name="prefNotificationErrorRetryIntervalTitle">Error Retry Interval</string>
        <string name="prefLoggingCategory">Logging</string>
        <string name="prefConnectionTimeoutTitle">Connection Timeout</string>
        <string name="prefConnectionTimeoutDefault">15000</string>
        <string name="prefReadTimeoutTitle">Read Timeout</string>
        <string name="prefReadTimeoutDefault">10000</string>
        <string name="prefDeviceKey">device</string>
        <string name="prefHostKey">host</string>
        <string name="prefPortKey">port</string>
        <string name="prefHostAwayKey">hostaway</string>
        <string name="prefPortAwayKey">portaway</string>
        <string name="prefProfileSelectedKey">profileselected</string>
        <string name="prefUserIdKey">userid</string>
        <string name="prefChangelogKey">changelog</string>
        <string name="prefPre10MemoryKey">pre_10_memory_locations</string>
        <string name="prefAutoUpdateIntervalKey">update_interval</string>
        <string name="prefAutoUpdateModulesKey">update_modules</string>
        <string name="prefAutoUpdateProfileKey">update_profile</string>
        <string name="prefNotificationEnableKey">notification</string>
        <string name="prefNotificationSoundKey">notification_sound</string>
        <string name="prefNotificationErrorRetryKey">error_retry_count</string>
        <string name="prefNotificationErrorRetryIntervalKey">error_retry_interval</string>
        <string name="prefConnectionTimeoutKey">connection_timeout</string>
        <string name="prefReadTimeoutKey">read_timeout</string>
</resources>