<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2011-12 by Curt Binder (http://curtbinder.info)
 
This work is made available under the terms of the 
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
http://creativecommons.org/licenses/by-nc-sa/3.0/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="@string/prefDeviceDefault"
        android:entries="@array/devices"
        android:entryValues="@array/devicesValues"
        android:key="@string/prefDeviceKey"
        android:title="@string/prefDeviceTitle"/>

    <PreferenceCategory android:title="@string/prefsCategoryProfiles" >
        <ListPreference
            android:defaultValue="@string/prefProfileSelectedDefault"
            android:entries="@array/profileLabels"
            android:entryValues="@array/profileIndex"
            android:key="@string/prefProfileSelectedKey"
            android:summary="@string/prefProfileSelectedSummary"
            android:title="@string/prefProfileSelectedTitle" />

        <EditTextPreference
            android:defaultValue="@string/prefHostHomeDefault"
            android:key="@string/prefHostKey"
            android:title="@string/prefHostTitle" />
        <EditTextPreference
            android:defaultValue="@string/prefPortDefault"
            android:key="@string/prefPortKey"
            android:title="@string/prefPortTitle" />
        <EditTextPreference
            android:defaultValue="@string/prefHostAwayDefault"
            android:key="@string/prefHostAwayKey"
            android:title="@string/prefHostAwayTitle" />
        <EditTextPreference
            android:defaultValue="@string/prefPortDefault"
            android:key="@string/prefPortAwayKey"
            android:title="@string/prefPortAwayTitle" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefsCategoryPortal" >
        <EditTextPreference
            android:defaultValue="@string/prefUserIdDefault"
            android:key="@string/prefUserIdKey"
            android:title="@string/prefUserIdTitle" />
    </PreferenceCategory>

</PreferenceScreen>