<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2013 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="appinfo"
    android:title="@string/prefAppTitle">

    <PreferenceScreen
        android:key="version"
        android:selectable="false"
        android:summary="@string/app_version"
        android:title="@string/prefVersionTitle" />
    <PreferenceScreen
        android:key="author"
        android:selectable="false"
        android:summary="@string/prefAuthorSummary"
        android:title="@string/prefAuthorTitle" />
    <PreferenceScreen
        android:key="contributor"
        android:selectable="false"
        android:summary="@string/prefContributorSummary"
        android:title="@string/prefContributorTitle" />
    <PreferenceScreen
        android:key="copyright"
        android:selectable="false"
        android:summary="@string/prefCopyrightSummary"
        android:title="@string/prefCopyrightTitle" />

    <PreferenceScreen
        android:selectable="false"
        android:summary="@string/prefLicenseSummary"
        android:title="@string/prefLicenseTitle" />

    <PreferenceScreen
        android:key="@string/prefChangelogKey"
        android:summary="@string/prefChangelogSummary"
        android:title="@string/titleChangelog" />

    <Preference
        android:summary="@string/prefReefAngelSummary"
        android:title="@string/prefReefAngelTitle">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/websiteReefangel" />
    </Preference>
    <Preference
        android:summary="@string/prefForumSummary"
        android:title="@string/prefForumTitle">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/forumReefangel" />
    </Preference>

</PreferenceScreen>