<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2011-12 by Curt Binder (http://curtbinder.info)
 
This work is made available under the terms of the 
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
http://creativecommons.org/licenses/by-nc-sa/3.0/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefPre10MemoryKey"
            android:summary="@string/prefPre10MemorySummary"
            android:title="@string/prefPre10MemoryTitle" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefAutoUpdateModulesKey"
            android:summary="@string/prefAutoUpdateModulesSummary"
            android:title="@string/prefAutoUpdateModulesTitle" />
        <ListPreference
            android:defaultValue="@string/prefConnectionTimeoutDefault"
            android:entries="@array/networkTimeout"
            android:entryValues="@array/networkTimeoutValues"
            android:key="@string/prefConnectionTimeoutKey"
            android:title="@string/prefConnectionTimeoutTitle" />
        <ListPreference
            android:defaultValue="@string/prefReadTimeoutDefault"
            android:entries="@array/networkTimeout"
            android:entryValues="@array/networkTimeoutValues"
            android:key="@string/prefReadTimeoutKey"
            android:title="@string/prefReadTimeoutTitle" />

</PreferenceScreen>