<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2011-12 by Curt Binder (http://curtbinder.info)
 
This work is made available under the terms of the 
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
http://creativecommons.org/licenses/by-nc-sa/3.0/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

        <ListPreference
            android:defaultValue="@string/prefAutoUpdateIntervalDefault"
            android:entries="@array/updateInterval"
            android:entryValues="@array/updateIntervalValues"
            android:key="@string/prefAutoUpdateIntervalKey"
            android:title="@string/prefAutoUpdateIntervalTitle" />
        <ListPreference
            android:defaultValue="@string/prefAutoUpdateProfileDefault"
            android:entries="@array/updateProfile"
            android:entryValues="@array/updateProfileValues"
            android:key="@string/prefAutoUpdateProfileKey"
            android:title="@string/prefAutoUpdateProfileTitle" />

</PreferenceScreen>