<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2014 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefNotificationEnableKey"
            android:title="@string/labelEnable" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="@string/prefNotificationEnableKey"
            android:key="@string/prefNotificationSoundKey"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/prefNotificationSoundTitle" />

        <ListPreference
            android:defaultValue="@string/prefNotificationErrorRetryDefault"
            android:dependency="@string/prefNotificationEnableKey"
            android:entries="@array/errorRetryCount"
            android:entryValues="@array/errorRetryCountValues"
            android:key="@string/prefNotificationErrorRetryKey"
            android:title="@string/prefNotificationErrorRetryTitle" />
        <ListPreference
            android:defaultValue="@string/prefNotificationErrorRetryIntervalDefault"
            android:dependency="@string/prefNotificationEnableKey"
            android:entries="@array/errorRetryInterval"
            android:entryValues="@array/errorRetryIntervalValues"
            android:key="@string/prefNotificationErrorRetryIntervalKey"
            android:title="@string/prefNotificationErrorRetryIntervalTitle" />

</PreferenceScreen>