<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2014 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <header
        android:fragment="info.curtbinder.reefangel.phone.PrefProfileFragment"
        android:title="@string/prefsCategoryProfiles"
        android:summary="@string/prefCategoryProfilesSummary" />
    <header
        android:fragment="info.curtbinder.reefangel.phone.SettingsActivity$ControllerFragment"
        android:title="@string/prefsCategoryController"
        android:summary="@string/prefControllerSummary"/>
    <header
        android:fragment="info.curtbinder.reefangel.phone.PrefAutoUpdateFragment"
        android:title="@string/prefAutoUpdateCategory" />
    <header
        android:fragment="info.curtbinder.reefangel.phone.PrefAdvancedFragment"
        android:title="@string/prefsCategoryAdvanced" />
    <header
        android:fragment="info.curtbinder.reefangel.phone.PrefNotificationsFragment"
        android:title="@string/prefNotificationCategory" />
    <header
        android:fragment="info.curtbinder.reefangel.phone.PrefLoggingFragment"
        android:title="@string/prefLoggingCategory" />
    <header
        android:fragment="info.curtbinder.reefangel.phone.PrefAppFragment"
        android:title="@string/prefsCategoryApp" />
</preference-headers>