<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2014 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <Button
                android:id="@+id/command_button_feed"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_restaurant"
                android:text="@string/buttonFeeding" />

            <Button
                android:id="@+id/command_button_water"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_mist"
                android:text="@string/buttonWater" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/command_button_exit"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_exit"
                android:text="@string/buttonExit" />

            <Button
                android:id="@+id/command_button_reboot"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_io"
                android:text="@string/labelReboot" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/command_button_lights_on"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_bulb_yellow"
                android:text="@string/labelLightsOn" />

            <Button
                android:id="@+id/command_button_lights_off"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_bulb_white"
                android:text="@string/labelLightsOff" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/command_button_ato_clear"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_basket"
                android:text="@string/buttonAtoClear" />

            <Button
                android:id="@+id/command_button_overheat_clear"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_temperature"
                android:text="@string/buttonOverheatClear" />
        </TableRow>
    </TableLayout>

</ScrollView>